# moremi_toolkits

./: .gitignore  README.md  requirements.txt
components/moremi-biokit/: antibodies_usage_example.ipynb  pyproject.toml  requirements.md
components/moremi-biokit/antibody_notebook_outputs/: example_antibodies.fasta
components/moremi-biokit/antibody_notebook_outputs/batch_processor_results/: antibody_validation_summary_20250509_112033.txt  sequences.txt
components/moremi-biokit/moremi_biokit/: __init__.py  pdb_fetcher.py
components/moremi-biokit/moremi_biokit/antibodies/: __init__.py  antibody_ranker.py  antibody_validator.py  batch_antibody_processor.py
components/moremi-biokit/moremi_biokit/antibodies/analysis_tools/: __init__.py  blast_analyzer.py  developability.py  epitope_predictor.py  optimized_util_func.py  predict_affinity.py  stability_predictor.py  structure_predictor.py
components/moremi-biokit/moremi_biokit/antibodies/reports/: __init__.py  antibody_enhanced_report_generator.py  antibody_report_generator.py
components/moremi-biokit/moremi_biokit/antibodies/utils/: __init__.py  pdb_fetcher.py
components/moremi-biokit/moremi_biokit/assets/fonts/: README.md  SpaceGrotesk-Bold.pkl  SpaceGrotesk-Regular.cw127.pkl  SpaceGrotesk-Regular.pkl
components/moremi-biokit/moremi_biokit/connectors/: __init__.py  ncbi.py  rcsb.py  uniprot.py
components/moremi-biokit/moremi_biokit/proteins/: __init__.py  batch_protein_processor.py  protein_ranker.py  protein_validator.py
components/moremi-biokit/moremi_biokit/proteins/analysis_tools/: blast_analyzer.py  developability.py  epitope_predictor.py  immunogenicity.py  optimized_util_func.py  predict_affinity.py  protparam_analyzer.py  stability_predictor.py  structure_predictor.py
components/moremi-biokit/moremi_biokit/proteins/reports/: __init__.py
components/moremi-biokit/moremi_biokit/smiles/: batch_molecule_processor.py  small_molecule_ranker_v4.py  small_molecule_validator_v3.py
docs/: coding_guide.md  main_docs.md  proteins_api.md  (+2 more)
moremi-biokit/: antibodies_usage_example.ipynb  error_handling_improvements.md  pyproject.toml
moremi-biokit/docs/: column_naming_guide.md  ranking_output_improvements.md
moremi-biokit/example_data/: example_molecules.smi
moremi-biokit/moremi_biokit/: __init__.py  pdb_fetcher.py
moremi-biokit/moremi_biokit/connectors/: __init__.py  _utils.py  local_pdb_fasta_parser.py  rcsb.py
moremi-biokit/moremi_biokit/proteins/: __init__.py  batch_protein_processor.py  protein_ranker.py  protein_validator.py  protein_validator_v2.py
moremi-biokit/moremi_biokit/proteins/analysis_tools/: __init__.py  aggregation_predictor.py  conservancy.py  developability.py  epitope_predictor.py  glycosylation_analyzer.py  immunogenicity.py  predict_affinity.py  protparam_analyzer.py  stability_predictor.py  structure_predictor.py
moremi-biokit/moremi_biokit/proteins/reports/: protein_enhanced_report_generator.py  protein_report_generator.py
moremi-biokit/moremi_biokit/smiles/: __init__.py  small_molecule_ranker_v4.py  small_molecule_validator_v3.py
moremi-biokit/moremi_biokit/smiles/property_calculators/: __init__.py  admet_predictor.py  druglikeness.py  lipophilicity.py  medicinal_chemistry.py  pharmacokinetics.py  physicochemical.py  solubility.py
moremi-biokit/moremi_biokit/smiles/reports/: __init__.py  enhanced_report_generator.py  report_generator.py
moremi-biokit/moremi_biokit/smiles/utils/: __init__.py
moremi-biokit/moremi_biokit/test_pdb_targets/smiles/: 1bzv.cif
(+14 files in other folders)
