[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moremi-biokit"
version = "0.1.74"
description = "Core biological processing toolkit for the Moremi Bio ecosystem."
# readme = "../README.md"
requires-python = ">=3.8"
# license-files = ["../LICENSE"] # Points to the monorepo root LICENSE
authors = [
  { name = "Bio Team", email = "contact@minohealth.org" },
]
# Add classifiers if you plan to ever publish to an internal PyPI
# classifiers = [
#     "Development Status :: 3 - Alpha",
#     "Intended Audience :: Developers",
#     "Programming Language :: Python :: 3",
#     # ...
# ]

dependencies = [
    "admet_ai",
    "requests",
    "pandas",
    "rdkit",
    "reportlab",
    "svglib",
    "torch==2.5.1",
    "biopython",
    "iedb",
    "numpy",
    "prodigy-prot",
    "matplotlib",
    "scikit-learn",
    "seaborn",
    "tqdm",
    "fpdf",
    "py3Dmol",
    "pyfaidx",
]

[project.optional-dependencies]
dev = [
    "pytest >= 7.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy", # Optional: for static type checking
    "pre-commit", # For git hooks
]

[project.scripts]
# SMILES tools
convert-smiles = "moremi_biokit.smiles.utils.convert_smiles:main"
process-smiles-batch = "moremi_biokit.smiles.batch_molecule_processor:main"
# Protein tools
predict-structure = "moremi_biokit.proteins.analysis_tools.structure_predictor:main"
fetch-pdb = "moremi_biokit.proteins.utils.pdb_fetcher:main"
process-protein-batch = "moremi_biokit.proteins.batch_protein_processor:main"

[tool.setuptools.packages.find]
include = ["moremi_biokit", "moremi_biokit.*"]

[tool.setuptools.package-data]
# Include assets for smiles reports (fonts, images) and proteins utils (CSV database)
"moremi_biokit" = [
    "assets/fonts/*.ttf", 
    "assets/*.png",
    "proteins/utils/*.csv",
    "test_pdb_targets/proteins/*.pdb", 
    "test_pdb_targets/smiles/*.pdb", 
    "connectors/*.txt",
]

# Example of excluding files (if needed)
# exclude = ["*.pyc", "*~"]